dodałam dotychczas zmergowane api dotyczące chatu
