# aiim_project/storage/api-docs/api-docs.json
@@ -1396,6 +1396,307 @@
                     }
                 }
             }
+        },
+        "/api/noticeboard/showComments/{id}": {
+            "get": {
+                "description": "Wyswietla komentarze pod konkretnym noticeboard",
+                "summary": "Komentarze pod konkretnym noticeboard",
+                "tags": [
+                    "Notice Board"
+                ],
+                "parameters": [
+                    {
+                        "name":"id",
+                        "in": "path",
+                        "description": "ID noticeboarda, którego komentarze wyświetlamy",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 0
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Wyświetlamy komentarze pod tym postem"
+                    },
+                    "404": {
+                        "description": "Nie ma jeszcze żadnych komentarzy!"
+                    }
+                }
+            }
+        },
+        "/api/chats/checkIfChatHasGuide/{chatId}/{clickerId}": {
+            "get": {
+                "description": "Sprawdza czy można otworzyć ten chat z powiadomienia",
+                "summary": "Sprawdza czy można otworzyć ten chat z powiadomienia",
+                "tags": [
+                    "Chats"
+                ],
+                "parameters": [
+                    {
+                        "name":"chatId",
+                        "in": "path",
+                        "description": "ID chatu, na który chcemy odpowiedzieć",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 0
+                        }
+                    },
+                    {
+                        "name":"clickerId",
+                        "in": "path",
+                        "description": "ID clickera (guida), który próbuje otworzyć chat",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 0
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Otwieramy chat z zapytaniem"
+                    },
+                    "404": {
+                        "description": "Czat jest już obsługiwany przez innego wolontariusza"
+                    }
+                }
+            }
+        },
+        "/api/chats/askToClose/{id}": {
+            "get": {
+                "description": "Wysłanie powiadomienia z przypomnieniem o zamknięciu chatu",
+                "summary": "Wysłanie powiadomienia z przypomnieniem o zamknięciu chatu",
+                "tags": [
+                    "Chats"
+                ],
+                "parameters": [
+                    {
+                        "name":"chatId",
+                        "in": "path",
+                        "description": "ID chatu, którego chcemy zamknąć",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 0
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Powiadomienia poprawnie wysłane"
+                    },
+                    "404": {
+                        "description": "Wolontariusz lub Użytkownik nie istnieje"
+                    }
+                }
+            }
+        },
+        "/api/chats/closeChat/{id}": {
+            "patch": {
+                "description": "Zamknięcie chatu",
+                "summary": "Zamknięcie chatu",
+                "tags": [
+                    "Chats"
+                ],
+                "parameters": [
+                    {
+                        "name":"chatId",
+                        "in": "path",
+                        "description": "ID chatu, który zamykamy",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 0
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Chat został zamknięty"
+                    },
+                    "404": {
+                        "description": "Chat nie istnieje"
+                    }
+                }
+            }
+        },
+        "/api/chats/{id}": {
+            "delete": {
+                "description": "Usunięcie chatu",
+                "summary": "Usunięcie chatu",
+                "tags": [
+                    "Chats"
+                ],
+                "parameters": [
+                    {
+                        "name":"chatId",
+                        "in": "path",
+                        "description": "ID chatu, który usuwamy",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 0
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Chat został usunięty"
+                    },
+                    "404": {
+                        "description": "Chat nie istnieje lub nie jest zamknięty"
+                    }
+                }
+            }
+        },
+        "/api/chats/createChat": {
+            "post": {
+                "summary": "Nowy chat",
+                "description": "Dodanie nowego zapytania i utworzenie chatu",
+                "tags": [
+                    "Chats"
+                ],
+                "requestBody": {
+                    "required": true,
+                    "description": "Chat i Message i metadane",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "oneOf": [
+                                    {
+                                    "type": "object",
+                                    "properties": {
+                                        "id_user": {
+                                            "type": "integer",
+                                            "format": "int32"
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "format": "date",
+                                            "example": "2023-07-10"
+                                        },
+                                        "edited_at": {
+                                            "type": "string",
+                                            "format": "date",
+                                            "example": "2023-07-10"
+                                        },
+                                        "open": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "id_guide": {
+                                            "type": "integer",
+                                            "format": "int32"
+                                        }
+                                    }
+                                    },
+                                    {
+                                    "type": "object",
+                                    "properties": {
+                                        "id_chat": {
+                                            "type": "integer",
+                                            "format": "int32"
+                                        },
+                                        "id_user": {
+                                            "type": "integer",
+                                            "format": "int32"
+                                        },
+                                        "user_type": {
+                                            "type": "string",
+                                            "minLength": 1,
+                                            "example": "U"
+                                        },
+                                        "content": {
+                                            "type": "string",
+                                            "minLength": 10,
+                                            "example": "Gdzie jest stołówka?"
+                                        },
+                                        "send_at": {
+                                            "type": "string",
+                                            "format": "date",
+                                            "example": "2023-07-10"
+                                        }
+                                    }
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "message": "Dodano pytanie",
+                                    "data": {
+                                        "data": {
+                                            "type": "object",
+                                            "format": "Message",
+                                            "example": {
+                                                "id_chat": "",
+                                                "id_user": "",
+                                                "user_type": "",
+                                                "content": "",
+                                                "date": "YYYY-MM-DD"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Zła walidacja",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Nieprawidłowe dane"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/chats/{chatId}/messages": {
+            "get": {
+                "description": "Wyswietla komentarze w konkretnym chacie",
+                "summary": "Komentarze w chacie",
+                "tags": [
+                    "Chats"
+                ],
+                "parameters": [
+                    {
+                        "name":"id",
+                        "in": "path",
+                        "description": "ID chatu, którego wiadomości wyświetlamy",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 0
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Wyświetlamy wiadomości w tym chacie"
+                    },
+                    "404": {
+                        "description": "Chat nie istnieje!"
+                    }
+                }
+            }
         }
     },
     "components": {
